# mcmc

./: .gitignore  README.md  pyproject.toml
notebooks/: mcmc_1d.ipynb
