[project]
name = "mcmc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MizuhoAOKI", email = "mizuhoaoki1998@gmail.com" }
]
dependencies = [
    "notebook>=7.2.1",
    "numpy>=2.0.1",
    "matplotlib>=3.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcmc"]
